fix links, top padding of hero on mobile

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -13,9 +13,9 @@
   font-family: 'poppinsregular';
 }
 
-@media screen and (max-width: 966px) {
+@media screen and (max-width: 996px) {
   .heroBanner {
-    padding: 4rem 0;
+    padding: 0 0 4rem 0;
   }
 }
 
